--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
 💬 Ask me about anything.\n\n
 📫 How to reach me:</string>
     <string name="What_is_your_nickname">What is your nickname?</string>
+    <string name="Button_name">Button</string>
 </resources>
